Fixed overflow of x axis on mobile and Chrome.

--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -8,9 +8,11 @@ html {
   font-family: sans-serif;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
+      overflow-x: hidden;
 }
 body {
   margin: 0;
+  overflow-x: hidden;
 }
 article,
 aside,
